applications/environments/dev/pfm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: pfm
  name: pfm
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pfm
                port:
                  number: 80
      host: api.debona.ir
